cabal-version:  3.0
name:           multisets
version:        0.0.0.0
bug-reports:    https://github.com/jonathanknowles/multisets/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2023 Jonathan Knowles
category:
synopsis:
description:

extra-doc-files:
    README.md

common dependency-base
    build-depends:base                          >= 4.14.3.0   && < 4.18
common dependency-containers
    build-depends:containers                    >= 0.6.5.1    && < 0.7
common dependency-deepseq
    build-depends:deepseq                       >= 1.4.4.0    && < 1.5
common dependency-groups
    build-depends:groups                        >= 0.5.3      && < 0.6
common dependency-hspec
    build-depends:hspec                         >= 2.10.9     && < 2.11
common dependency-monoid-subclasses
    build-depends:monoid-subclasses             >= 1.2.1      && < 1.3
common dependency-pretty-show
    build-depends:pretty-show                   >= 1.10       && < 1.11
common dependency-QuickCheck
    build-depends:QuickCheck                    >= 2.14.2     && < 2.15
common dependency-quickcheck-classes
    build-depends:quickcheck-classes            >= 0.6.5.0    && < 0.7
common dependency-quickcheck-groups
    build-depends:quickcheck-groups             >= 0.0.0.0    && < 0.1
common dependency-quickcheck-instances
    build-depends:quickcheck-instances          >= 0.3.28     && < 0.4
common dependency-quickcheck-monoid-subclasses
    build-depends:quickcheck-monoid-subclasses  >= 0.0.0.1    && < 0.1
common dependency-tasty-bench
    build-depends:tasty-bench                   >= 0.3.2      && < 0.4
common dependency-tasty-hunit
    build-depends:tasty-hunit                   >= 0.10.0.3   && < 0.11
common dependency-text
    build-depends:text                          >= 1.2.4.1    && < 2.1
common dependency-total-monoidal-maps
    build-depends:total-monoidal-maps           >= 0.0.0.0    && < 0.1

common extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        NoImplicitPrelude
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/multisets

library
    import:
      , dependency-base
      , dependency-containers
      , dependency-groups
      , dependency-monoid-subclasses
      , dependency-total-monoidal-maps
      , extensions
    hs-source-dirs:
        src/public
    exposed-modules:
        Data.MultiSet
    default-language:
        Haskell2010

test-suite test
    import:
      , dependency-base
      , dependency-containers
      , dependency-groups
      , dependency-hspec
      , dependency-monoid-subclasses
      , dependency-pretty-show
      , dependency-QuickCheck
      , dependency-quickcheck-classes
      , dependency-quickcheck-groups
      , dependency-quickcheck-instances
      , dependency-quickcheck-monoid-subclasses
      , dependency-text
      , extensions
    ghc-options:
        -threaded -with-rtsopts=-N
    main-is:
        Spec.hs
    hs-source-dirs:
        src/test
    other-modules:
        SpecHook
        Test.QuickCheck.Classes.Hspec
        Test.Hspec.Unit
    type:
        exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
      , multisets

benchmark benchmark
    import:
      , dependency-base
      , dependency-containers
      , dependency-deepseq
      , dependency-tasty-bench
      , dependency-tasty-hunit
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        src/benchmark
    main-is:
        Main.hs
    build-depends:
      , multisets
