cabal-version:  3.0
name:           multisets
version:        0.0.0.0
bug-reports:    https://github.com/jonathanknowles/multisets/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2023 Jonathan Knowles
category:
synopsis:
description:

extra-doc-files:
    README.md

common dependency-base
    build-depends:base                          >= 4.14.3.0   && < 4.20
common dependency-groups
    build-depends:groups                        >= 0.5.3      && < 0.6
common dependency-hspec
    build-depends:hspec                         >= 2.10.9     && < 2.12
common dependency-monoidmap
    build-depends:monoidmap                     >= 0.0.0.0    && < 0.1
common dependency-pretty-show
    build-depends:pretty-show                   >= 1.10       && < 1.11
common dependency-QuickCheck
    build-depends:QuickCheck                    >= 2.14.2     && < 2.15
common dependency-quickcheck-classes
    build-depends:quickcheck-classes            >= 0.6.5.0    && < 0.7

common extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        NoImplicitPrelude
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/multisets

library
    import:
      , dependency-base
      , dependency-groups
      , dependency-monoidmap
      , extensions
    build-depends:
        monoid-subclasses
    hs-source-dirs:
        src/public
    exposed-modules:
        Data.MultiSet
    default-language:
        Haskell2010

test-suite test
    import:
      , dependency-base
      , dependency-hspec
      , dependency-pretty-show
      , dependency-QuickCheck
      , dependency-quickcheck-classes
      , extensions
    ghc-options:
        -threaded -with-rtsopts=-N
    main-is:
        Spec.hs
    hs-source-dirs:
        src/test
    other-modules:
        Data.MultiSetSpec
        SpecHook
        Test.QuickCheck.Classes.Hspec
        Test.Hspec.Unit
    type:
        exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
      , multisets

benchmark benchmark
    import:
      , dependency-base
      , extensions
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        src/benchmark
    main-is:
        Main.hs
    build-depends:
      , multisets
